@@ -182,13 +182,13 @@ sub __TOKENIZER__on_char {
 	}
 
 	# We might be a subroutine attribute.
-	my @tokens = $t->_previous_significant_tokens(1);
-	if ( $tokens[0] and $tokens[0]->{_attribute} ) {
+	if ( __current_token_is_attribute($t) ) {
 		$t->{class} = $t->{token}->set_class( 'Attribute' );
 		return $t->{class}->__TOKENIZER__commit( $t );
 	}
 
 	# Check for a quote like operator
+	my @tokens = $t->_previous_significant_tokens(1);
 	my $word = $t->{token}->{content};
 	if ( $QUOTELIKE{$word} and ! $class->__TOKENIZER__literal($t, $word, \@tokens) ) {
 		$t->{class} = $t->{token}->set_class( $QUOTELIKE{$word} );
@@ -257,8 +257,7 @@ sub __TOKENIZER__commit {
 	$t->{line_cursor} += length $word;
 
 	# We might be a subroutine attribute.
-	my @tokens = $t->_previous_significant_tokens(2);
-	if ( $tokens[0] and $tokens[0]->{_attribute} ) {
+	if ( __current_token_is_attribute($t) ) {
 		$t->_new_token( 'Attribute', $word );
 		return ($t->{line_cursor} >= $t->{line_length}) ? 0
 			: $t->{class}->__TOKENIZER__on_char($t);
@@ -314,6 +313,7 @@ sub __TOKENIZER__commit {
 		return 0;
 	}
 
+	my @tokens = $t->_previous_significant_tokens(2);
 	my $token_class;
 	if ( $word =~ /\:/ ) {
 		# Since it's not a simple identifier...
@@ -333,6 +333,9 @@ sub __TOKENIZER__commit {
 		$token_class = 'Operator';
 
 	} else {
+		# Get tokens early to be sure to not disturb state set up by pos and m//gc.
+		my @tokens = $t->_previous_significant_tokens(1);
+
 		# If the next character is a ':' then it's a label...
 		pos $t->{line} = $t->{line_cursor};
 		if ( $t->{line} =~ m/\G(\s*:)(?!:)/gc ) {
@@ -409,6 +412,23 @@ sub __TOKENIZER__literal {
 
 	# Otherwise we probably aren't forced
 	'';
+}
+
+
+
+# Is the current Word really a subroutine attribute?
+sub __current_token_is_attribute {
+	my ( $t ) = @_;
+	my @tokens = $t->_previous_significant_tokens(1);
+	return (
+		$tokens[0]
+		and (
+			# hint from tokenizer
+			$tokens[0]->{_attribute}
+			# nothing between attribute and us except whitespace
+			or $tokens[0]->isa('PPI::Token::Attribute')
+		)
+	);
 }
 
 1;
