@@ -13,8 +13,6 @@ sub execute_test;
 sub permute_test;
 
 my %known_fails_sblock = map { $_ => 1 } 'sub foo:{}', 'sub foo : {}';
-my %known_fails_nprop = map { $_ => 1 } "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1 Attr2 Attr3 {}", "sub foo : Attr1\tAttr2\tAttr3 {}", "sub foo : Attr1\rAttr2\rAttr3 {}", "sub foo : Attr1\nAttr2\nAttr3 {}", "sub foo : Attr1\fAttr2\fAttr3 {}", "sub foo :\tAttr1\tAttr2\tAttr3\t{}", "sub foo :\tAttr1\tAttr2\tAttr3\t;", "sub foo :\rAttr1\rAttr2\rAttr3\r{}", "sub foo :\nAttr1\nAttr2\nAttr3\n{}", "sub foo :\fAttr1\fAttr2\fAttr3\f{}", "sub foo :\fAttr1\fAttr2\fAttr3\f;", "sub foo : Attr1() Attr2() Attr3() {}", "sub foo : Attr1()\tAttr2()\tAttr3() {}", "sub foo : Attr1()\rAttr2()\rAttr3() {}", "sub foo : Attr1()\nAttr2()\nAttr3() {}", "sub foo : Attr1()\fAttr2()\fAttr3() {}", "sub foo :\tAttr1()\tAttr2()\tAttr3()\t{}", "sub foo :\tAttr1()\tAttr2()\tAttr3()\t;", "sub foo :\rAttr1()\rAttr2()\rAttr3()\r{}", "sub foo :\nAttr1()\nAttr2()\nAttr3()\n{}", "sub foo :\fAttr1()\fAttr2()\fAttr3()\f{}", "sub foo :\fAttr1()\fAttr2()\fAttr3()\f;", "sub foo : Attr1() Attr2(___) Attr3() {}", "sub foo : Attr1()\tAttr2(___)\tAttr3() {}", "sub foo : Attr1()\rAttr2(___)\rAttr3() {}", "sub foo : Attr1()\nAttr2(___)\nAttr3() {}", "sub foo : Attr1()\fAttr2(___)\fAttr3() {}", "sub foo :\tAttr1()\tAttr2(___)\tAttr3()\t{}", "sub foo :\tAttr1()\tAttr2(___)\tAttr3()\t;", "sub foo :\rAttr1()\rAttr2(___)\rAttr3()\r{}", "sub foo :\nAttr1()\nAttr2(___)\nAttr3()\n{}", "sub foo :\fAttr1()\fAttr2(___)\fAttr3()\f{}", "sub foo :\fAttr1()\fAttr2(___)\fAttr3()\f;", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1(a) Attr2(b) {}", "sub foo : Attr1(a)\tAttr2(b) {}", "sub foo : Attr1(a)\rAttr2(b) {}", "sub foo : Attr1(a)\nAttr2(b) {}", "sub foo : Attr1(a)\fAttr2(b) {}", "sub foo :\tAttr1(a)\tAttr2(b)\t{}", "sub foo :\tAttr1(a)\tAttr2(b)\t;", "sub foo :\rAttr1(a)\rAttr2(b)\r{}", "sub foo :\nAttr1(a)\nAttr2(b)\n{}", "sub foo :\fAttr1(a)\fAttr2(b)\f{}", "sub foo :\fAttr1(a)\fAttr2(b)\f;", "sub foo : switch(10,foo(7,3)) expensive {}", "sub foo : switch(10,foo(7,3))\texpensive {}", "sub foo : switch(10,foo(7,3))\rexpensive {}", "sub foo : switch(10,foo(7,3))\nexpensive {}", "sub foo : switch(10,foo(7,3))\fexpensive {}", "sub foo :\tswitch(10,foo(7,3))\texpensive\t{}", "sub foo :\tswitch(10,foo(7,3))\texpensive\t;", "sub foo :\rswitch(10,foo(7,3))\rexpensive\r{}", "sub foo :\nswitch(10,foo(7,3))\nexpensive\n{}", "sub foo :\fswitch(10,foo(7,3))\fexpensive\f{}", "sub foo :\fswitch(10,foo(7,3))\fexpensive\f;", "sub foo : Ugly('\\(\") Bad {}", "sub foo : Ugly('\\(\")\tBad {}", "sub foo : Ugly('\\(\")\rBad {}", "sub foo : Ugly('\\(\")\nBad {}", "sub foo : Ugly('\\(\")\fBad {}", "sub foo :\tUgly('\\(\")\tBad\t{}", "sub foo :\tUgly('\\(\")\tBad\t;", "sub foo :\rUgly('\\(\")\rBad\r{}", "sub foo :\nUgly('\\(\")\nBad\n{}", "sub foo :\fUgly('\\(\")\fBad\f{}", "sub foo :\fUgly('\\(\")\fBad\f;", "sub foo : lvalue method {}", "sub foo : lvalue\tmethod {}", "sub foo : lvalue\rmethod {}", "sub foo : lvalue\nmethod {}", "sub foo : lvalue\fmethod {}", "sub foo :\tlvalue\tmethod\t{}", "sub foo :\tlvalue\tmethod\t;", "sub foo :\rlvalue\rmethod\r{}", "sub foo :\nlvalue\nmethod\n{}", "sub foo :\flvalue\fmethod\f{}", "sub foo :\flvalue\fmethod\f;", "sub foo : Attr1(a) Attr2(b) : Attr3(c) Attr4(d) {}";
-my %known_fails_aprop = map { $_ => 1 } 'sub foo :Attr1(){}', 'sub foo :Attr1();', 'sub foo : Attr1() {}',  "sub foo :\tAttr1()\t{}", "sub foo :\tAttr1()\t;", "sub foo :\rAttr1()\r{}", "sub foo :\nAttr1()\n{}", "sub foo :\fAttr1()\f{}", "sub foo :\fAttr1()\f;", "sub foo :\fAttr1()\f{}", "sub foo :_(){}", "sub foo :_();", "sub foo : _() {}", "sub foo : _() {}", "sub foo : _() {}", "sub foo : _() {}", "sub foo : _() {}", "sub foo :\t_()\t{}", "sub foo :\t_()\t;", "sub foo :\r_()\r{}", "sub foo :\n_()\n{}", "sub foo :\f_()\f{}", "sub foo :\f_()\f;", "sub foo :\t_()\t{}", "sub foo :\r_()\r{}", "sub foo :\n_()\n{}", "sub foo :\f_()\f{}", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1 Attr2 Attr3 {}", "sub foo : Attr1\tAttr2\tAttr3 {}", "sub foo : Attr1\rAttr2\rAttr3 {}", "sub foo : Attr1\nAttr2\nAttr3 {}", "sub foo : Attr1\fAttr2\fAttr3 {}", "sub foo :\tAttr1\tAttr2\tAttr3\t{}", "sub foo :\tAttr1\tAttr2\tAttr3\t;", "sub foo :\rAttr1\rAttr2\rAttr3\r{}", "sub foo :\nAttr1\nAttr2\nAttr3\n{}", "sub foo :\fAttr1\fAttr2\fAttr3\f{}", "sub foo :\fAttr1\fAttr2\fAttr3\f;", "sub foo :Attr1():Attr2():Attr3(){}", "sub foo :Attr1():Attr2():Attr3();", "sub foo : Attr1() Attr2() Attr3() {}", "sub foo : Attr1()\tAttr2()\tAttr3() {}", "sub foo : Attr1()\rAttr2()\rAttr3() {}", "sub foo : Attr1()\nAttr2()\nAttr3() {}", "sub foo : Attr1()\fAttr2()\fAttr3() {}", "sub foo :\tAttr1()\tAttr2()\tAttr3()\t{}", "sub foo :\tAttr1()\tAttr2()\tAttr3()\t;", "sub foo :\rAttr1()\rAttr2()\rAttr3()\r{}", "sub foo :\nAttr1()\nAttr2()\nAttr3()\n{}", "sub foo :\fAttr1()\fAttr2()\fAttr3()\f{}", "sub foo :\fAttr1()\fAttr2()\fAttr3()\f;", "sub foo :\tAttr1()\t:\tAttr2()\t:\tAttr3()\t{}", "sub foo :\rAttr1()\r:\rAttr2()\r:\rAttr3()\r{}", "sub foo :\nAttr1()\n:\nAttr2()\n:\nAttr3()\n{}", "sub foo :\fAttr1()\f:\fAttr2()\f:\fAttr3()\f{}", "sub foo :Attr1():Attr2(___):Attr3(){}", "sub foo :Attr1():Attr2(___):Attr3();", "sub foo : Attr1() Attr2(___) Attr3() {}", "sub foo : Attr1()\tAttr2(___)\tAttr3() {}", "sub foo : Attr1()\rAttr2(___)\rAttr3() {}", "sub foo : Attr1()\nAttr2(___)\nAttr3() {}", "sub foo : Attr1()\fAttr2(___)\fAttr3() {}", "sub foo :\tAttr1()\tAttr2(___)\tAttr3()\t{}", "sub foo :\tAttr1()\tAttr2(___)\tAttr3()\t;", "sub foo :\rAttr1()\rAttr2(___)\rAttr3()\r{}", "sub foo :\nAttr1()\nAttr2(___)\nAttr3()\n{}", "sub foo :\fAttr1()\fAttr2(___)\fAttr3()\f{}", "sub foo :\fAttr1()\fAttr2(___)\fAttr3()\f;", "sub foo :\tAttr1()\t:\tAttr2(___)\t:\tAttr3()\t{}", "sub foo :\rAttr1()\r:\rAttr2(___)\r:\rAttr3()\r{}", "sub foo :\nAttr1()\n:\nAttr2(___)\n:\nAttr3()\n{}", "sub foo :\fAttr1()\f:\fAttr2(___)\f:\fAttr3()\f{}", "sub foo : Attr1 Attr2 {}", "sub foo : Attr1\tAttr2 {}", "sub foo : Attr1\rAttr2 {}", "sub foo : Attr1\nAttr2 {}", "sub foo : Attr1\fAttr2 {}", "sub foo :\tAttr1\tAttr2\t{}", "sub foo :\tAttr1\tAttr2\t;", "sub foo :\rAttr1\rAttr2\r{}", "sub foo :\nAttr1\nAttr2\n{}", "sub foo :\fAttr1\fAttr2\f{}", "sub foo :\fAttr1\fAttr2\f;", "sub foo : Attr1(a) Attr2(b) {}", "sub foo : Attr1(a)\tAttr2(b) {}", "sub foo : Attr1(a)\rAttr2(b) {}", "sub foo : Attr1(a)\nAttr2(b) {}", "sub foo : Attr1(a)\fAttr2(b) {}", "sub foo :\tAttr1(a)\tAttr2(b)\t{}", "sub foo :\tAttr1(a)\tAttr2(b)\t;", "sub foo :\rAttr1(a)\rAttr2(b)\r{}", "sub foo :\nAttr1(a)\nAttr2(b)\n{}", "sub foo :\fAttr1(a)\fAttr2(b)\f{}", "sub foo :\fAttr1(a)\fAttr2(b)\f;", "sub foo : switch(10,foo(7,3)) expensive {}", "sub foo : switch(10,foo(7,3))\texpensive {}", "sub foo : switch(10,foo(7,3))\rexpensive {}", "sub foo : switch(10,foo(7,3))\nexpensive {}", "sub foo : switch(10,foo(7,3))\fexpensive {}", "sub foo :\tswitch(10,foo(7,3))\texpensive\t{}", "sub foo :\tswitch(10,foo(7,3))\texpensive\t;", "sub foo :\rswitch(10,foo(7,3))\rexpensive\r{}", "sub foo :\nswitch(10,foo(7,3))\nexpensive\n{}", "sub foo :\fswitch(10,foo(7,3))\fexpensive\f{}", "sub foo :\fswitch(10,foo(7,3))\fexpensive\f;", "sub foo : Ugly('\\(\") Bad {}", "sub foo : Ugly('\\(\")\tBad {}", "sub foo : Ugly('\\(\")\rBad {}", "sub foo : Ugly('\\(\")\nBad {}", "sub foo : Ugly('\\(\")\fBad {}", "sub foo :\tUgly('\\(\")\tBad\t{}", "sub foo :\tUgly('\\(\")\tBad\t;", "sub foo :\rUgly('\\(\")\rBad\r{}", "sub foo :\nUgly('\\(\")\nBad\n{}", "sub foo :\fUgly('\\(\")\fBad\f{}", "sub foo :\fUgly('\\(\")\fBad\f;", "sub foo : lvalue method {}", "sub foo : lvalue\tmethod {}", "sub foo : lvalue\rmethod {}", "sub foo : lvalue\nmethod {}", "sub foo : lvalue\fmethod {}", "sub foo :\tlvalue\tmethod\t{}", "sub foo :\tlvalue\tmethod\t;", "sub foo :\rlvalue\rmethod\r{}", "sub foo :\nlvalue\nmethod\n{}", "sub foo :\flvalue\fmethod\f{}", "sub foo :\flvalue\fmethod\f;", "sub foo : Attr1(a) Attr2(b) : Attr3(c) Attr4(d) {}";
 
 PARSING_AND_METHODS: {
 	# no attribute
@@ -76,18 +74,12 @@ sub execute_test {
 	isa_ok( $Document, 'PPI::Document', "$msg got document" );
 
 	my $attributes = $Document->find( 'PPI::Token::Attribute') || [];
-	{
-	local $TODO = "known bug" if $known_fails_nprop{$code};
 	is( scalar(@$attributes), scalar(@$expected), "'$msg' got expected number of attributes" );
-	}
-	{
-	local $TODO = "known bug" if $known_fails_aprop{$code};
 	is_deeply(
 		[ map { [ $_->identifier, $_->parameters ] } @$attributes ],
 		$expected,
 		"'$msg' attribute properties as expected"
 	);
-	}
 
 	my $blocks = $Document->find( 'PPI::Structure::Block') || [];
 	my $blocks_expected = $code =~ m/{}$/ ? [ '{}' ] : [];
