@@ -44,6 +44,7 @@ Revision history for Perl extension PPI
 	  (MOREGAN)
 	- parse x64 as a word, not x operator + number (MOREGAN)
 	- parse 1.eq 1 as float + op, not concatenation
+	- parse subroutine attributes correctly (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
